# scenario-generator

./: .gitignore  README.md  pyproject.toml
src/scenario_generator/: main.py  prompts.py
src/scenario_generator/configs/: model_config.py  scenario_config.py
